<resources>
    <string name="app_name">Warranty Tracker</string>
    <string name="add_new">Add New</string>
    <string name="my_warranty_s">My Warranty\'s</string>
    <string name="my_warranty_s_underline"><u>My Warranty\'s</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="warranty">Warranty</string>
    <string name="item_name">Item Name</string>
    <string name="item_image">item_image</string>
    <string name="app_logo">app_logo</string>
    <string name="warranty_unit">Warranty Unit:</string>
    <string name="_04_06_2022">04/06/2022</string>
    <string name="view_picture"><u>View Picture</u></string>
    <string name="name_of_the_warranty">Name of the warranty:</string>
    <string name="fridge_lg">Fridge LG</string>
    <string name="date_when_it_expires">Date when it expires:</string>
    <string name="please_upload_picture_of_warranty">Please upload picture of warranty:</string>
    <string name="upload_picture">upload picture</string>
    <string name="add">Add</string>
</resources>