<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddWarrantyFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btn_color"
        android:minHeight="?attr/actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@+id/ivBack"
                android:gravity="center"
                android:text="Add Warranty"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tvNameOfWarranty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="30dp"
        android:text="@string/name_of_the_warranty"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtWarrantyName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/tvNameOfWarranty"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/box_bg"
        android:hint="Enter here"
        android:padding="3dp"
        android:paddingStart="10dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvWarrantyDateExpires"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtWarrantyName"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:text="@string/date_when_it_expires"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/llDatePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvWarrantyDateExpires"
        android:layout_centerVertical="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtDateAddWarranty"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@+id/imvCalenderAddWarranty"
            android:background="@drawable/box_bg"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="Select date"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imvCalenderAddWarranty"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_calendar" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvUploadPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llDatePicker"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:text="@string/please_upload_picture_of_warranty"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/imvUploadPicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/tvUploadPicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/upload_picture"
        android:src="@drawable/add_picture" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/imvUploadPicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:backgroundTint="@color/btn_color"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold" />

</RelativeLayout>