<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.HomePageActivity">

    <!--<com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp" />
    </com.google.android.material.appbar.AppBarLayout>-->
    <RelativeLayout
        android:id="@+id/rlHomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imvLogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_below="@+id/imvLogo">
            <Button
                android:id="@+id/btnAddNew"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_below="@+id/imvLogo"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="100dp"
                android:backgroundTint="@color/btn_color"
                android:text="@string/add_new"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMyWarranty"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_below="@+id/imvLogo"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="@color/btn_color"
                android:text="@string/my_warranty_s"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>



</RelativeLayout>